--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Downloads/mysql-connector-java-5.1.11/mysql-connector-java-5.1.11-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
